ingress and egress

--- a/02.md
+++ b/02.md
@@ -12,6 +12,13 @@ To solve these issue we have Docker which helps us to run Libs and Deps seperate
    ### Bit about OS
     Os kernal- It is responsible for communicating with underlying hardware .
     Set of software These software consist of different UI  and some other feutre which differentiate between them. 
+# Docker hub 
+ It is the service provided by the docker for finding and sharing  container image .
+  It is the one of the largest repositry of container image with an array of contenet source.
+   ## Main feautres of the docker hub 
+   - We can automatically build the image from Github and     Bitbucket  and push to the docker hub .
+   - We can push and pull the images .
+
  # Docker share  underlying Os kernal 
   linux share the os
   But windows doesn't
@@ -33,3 +40,5 @@ Container are meant to host the specific task .It will live as long as its proce
  -  `docker rmi `
  - ` docker pull ngnix` 
  - `docker run ubuntu ` it  will run instance of the ubunutu image and will exixt as soon as possible 
+ - Egress refers to the flow of data moving out of a private network into the public internet or another external network. This process is integral to network operations, especially in cloud environments where controlled data movement is paramount for security and efficiency.
+  - Ingress refers to the flow of the data from the extrnal source to the the private network. In cloud managing the ingress effectuvely is key to maintaing the data security and network integrity.
