THE COMMAND HAS BEEN UPDATED

--- a/02.md
+++ b/02.md
@@ -42,3 +42,16 @@ Container are meant to host the specific task .It will live as long as its proce
  - `docker run ubuntu ` it  will run instance of the ubunutu image and will exixt as soon as possible 
  - Egress refers to the flow of data moving out of a private network into the public internet or another external network. This process is integral to network operations, especially in cloud environments where controlled data movement is paramount for security and efficiency.
   - Ingress refers to the flow of the data from the extrnal source to the the private network. In cloud managing the ingress effectuvely is key to maintaing the data security and network integrity.
+
+# Rust dependicies 
+FROM rust:1.76
+WORKDIR /usr/src/blockchain
+ COPY . . 
+ RUN cargo install --path .
+ 
+CMD [ "My blockchain" ]
+ This is the latest version for the rust in docker 
+  # Next step 
+  docker build  -t filename  . 
+  docker ps -a 
+  docker run till here ur image must be published in the docker hub which can be acceds here.
